Add @NonNull annotations to QuotaService methods and update quota sta…